# EMB

./: .gitignore  README.md  medium_1_250_1_error  pov.tex  statemachina.xml
Lektion01ex/project_1/: project_1.ppr
Lektion01ex/project_2/: project_2.ppr
Lektion01ex/project_3/: project_3.ppr
Project2/bill_of_materials/: circle.eps  main.tex
Test/test/: impact_impact.xwbt  implementation.ucf  main.bgn  main.bit  main.bld  main.cmd_log  main.drc  main.ngc  main.ngd  main.ngr  main.pad  main.par  main.pcf  main.syr  main.twr  main.twx  main.unroutes  main.vhd  main.xst  main_bitgen.xwbt  main_envsettings.html  main_guide.ncd  main_map.map  main_map.mrp  main_map.ncd  main_map.ngm  main_map.xrpt  main_ngdbuild.xrpt  main_pad.csv  main_pad.txt  main_par.xrpt  main_summary.html  main_usage.xml  main_xst.xrpt  pa.fromNetlist.tcl  planAhead_pid13426.debug  test.gise  test.xise  usage_statistics_webtalk.html  webtalk_impact.xml  (+1 more)
brick_sorter/: efficiency.xlsx
brick_sorter/ADC/: ADC.ppr
brick_sorter/Board/: psu.brd  psu.sch
brick_sorter/report/: bib.tex  main.tex
brick_sorter/seri_term/: CMakeLists.txt  CMakeLists.txt~
brick_sorter/seri_term/include/: uTosNet.hpp
brick_sorter/seri_term/src/: main.cpp  uTosNet.cpp
brick_sorter/uTosNet/: uTosNet.ppr
code/blinkyled/: blinkyled.ppr
code/fsm/: fsm.ppr
licens/: Xilinx (3).lic
project3/POV/: pov.aux  pov.blg  pov.out  pov.tex
project3/report/: bib.tex  main.tex
project_2/: project_2.ppr
project_3_fsm_working/: project_3.ppr
vhdl_switch_case_compute/vhdl_switch_case_compute.xcodeproj/: project.pbxproj
(+905 files in other folders)
